--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,4 @@ install:
   - bin/buildout -c buildout.dev.cfg
   - bin/bower update
 script:
-  - bin/wct --plugin wct-sauce --sauce-username=$SAUCE_USERNAME \
-            --sauce-access-key=$SAUCE_ACCESS_KEY -s default
+  - bin/wct --plugin wct-sauce --sauce-username=$SAUCE_USERNAME --sauce-access-key=$SAUCE_ACCESS_KEY -s default
