--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,13 @@
   "dependencies": {
     "polymer": "Polymer/polymer#master",
     "webcomponentsjs": "webcomponents/webcomponentsjs#master",
-    "core-list": "Polymer/core-list#master"
+    "iron-icons": "PolymerElements/iron-icons#master",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#master",
+    "paper-header-panel": "PolymerElements/paper-header-panel#master",
+    "paper-icon-button": "PolymerElements/paper-icon-button#master",
+    "paper-item": "PolymerElements/paper-item#master",
+    "paper-menu": "PolymerElements/paper-menu#master",
+    "paper-toolbar": "PolymerElements/paper-toolbar#master"
   },
   "devDependencies": {
     "web-component-tester": "Polymer/web-component-tester#master"
