--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "webcomponentsjs": "webcomponents/webcomponentsjs#master",
     "iron-component-page": "PolymerElements/iron-component-page#master",
     "iron-icons": "PolymerElements/iron-icons#master",
+    "iron-pages": "PolymerElements/iron-pages#master",
     "paper-drawer-panel": "PolymerElements/paper-drawer-panel#master",
     "paper-header-panel": "PolymerElements/paper-header-panel#master",
     "paper-icon-button": "PolymerElements/paper-icon-button#master",
